--- a/permutation-city/permutation_city_js/index.html
+++ b/permutation-city/permutation_city_js/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script src="https://pyodide-cdn2.iodide.io/v0.15.0/full/pyodide.js"></script>
-    <script src="/static/perm-city/static/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.min.js"></script>
     
     <script src="/static/perm-city/target/target_sketch.js"  type="module"></script>
 
